[package]
name = "coco"
version = "0.1.3"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/coco"
documentation = "https://github.com/phodal/coco"
homepage = "https://github.com/phodal/coco"
description = """
Coco 是一个研发效能分析工具，如开发速率（根据架构复杂度及行数变更）、团队演进、历史分析、根因分析等。生成可视化报告，并对应的改进建议。 A DevOps efficiency analysis and auto-suggestion tool.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
  ".coco/*",
  "benchmark/*",
  "fixtures/*",
  "targets/*",
  ".github/*",
  ".gitattributes",
  ".adr.json",
]
#
#
#[features]
#actix = ["actix-web", "mime_guess"]
#
#[[visual]]
#name = "actix"
#path = "src/bin/visual.rs"
#required-features = ["actix"]
#
#[[visual]]
#name = "actix"
#path = "src/app/visual/local_server.rs"
#required-features = ["actix"]

[dependencies]
lazy_static = "1.4.0"

# time format
chrono = "0.4"

git2 = "0.13"

# for cli usage
clap = "2.33.3"

# for git clone
tempdir = "0.3"

# parse for url
url = "2.2.0"

# cloc
tokei = "12.1.2"

# serializing and deserializing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8" # for config parse

# Parallel
rayon = "1.5"

# gitignore
# docs: https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore
ignore = "0.4"

walkdir = "2"

regex = "1"

# grammar generator
pest = "2.1.3"
pest_derive = "2.1.0"

# embed file
rust-embed="5.9.0"

# visual for web
actix-web = { version = "3", default-features = false }
actix-rt = "2.0.0"
mime_guess = { version = "2" }

# cli prompt
dialoguer = "0.7.1"

# open URLs in browsers
webbrowser = "0.5.5"

[dependencies.framework]
path = "framework"

[workspace]
members = [
  'framework',
  'e2e'
]
