[package]
name = "core_model"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

# serializing and deserializing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8" # for config parse

# parse for url
url = "2.2.0"
