[package]
name = "framework"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/coco"
documentation = "https://github.com/phodal/coco"
homepage = "https://github.com/phodal/coco"
description = """
Framework is a detector for different frameworks in one projects
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    "benchmark/*",
    "fixtures/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
