[package]
name = "psa"
version = "0.1.1"
authors = ["ynfeng <fynwin@gmail.com>", "Phodal Huang<h@phodal.com>", "Inherd Group <group@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/coco"
documentation = "https://github.com/phodal/coco"
homepage = "https://github.com/phodal/coco"
description = """
PSA(Project structure analysis) is a analyzer for analysis project struct.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
  "benchmark/*",
  "fixtures/*",
  ".github/*",
  ".gitattributes",
  ".adr.json",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0"
erased-serde = "0.3"

lazy_static = "1.2"

walkdir = "2"

regex = "1"

pathdiff = "0.2.0"

sxd-xpath= "0.4.2"

sxd-document= "0.3.2"