[package]
name = "coco_container"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dockerfile-parser = "0.7.1"

[dependencies.core_model]
path = "../../core_model"

[lib]
name = "coco_container"
crate-type = ["cdylib"]
