[package]
name = "coco_coverage"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grcov = "0.7.1"

# grcov's dependencies
crossbeam = "^0.8"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
walkdir = "^2.3"
num_cpus = "^1.13"
semver = "^0.11"
md-5 = "^0.9"
zip = { version = "^0.5", default-features = false }
tempfile = "^3"
uuid = { version = "^0.8", features = ["v4"] }
globset = "^0.4"
quick-xml = "^0.21"
smallvec = "^1.6"
rustc-hash = "^1.1"
clap = "^2.33"
fomat-macros = "^0.3"
chrono = { version = "^0.4", features = ["serde"] }
log = "^0.4"
simplelog = "^0.9"
regex = "^1.4"
rayon = "^1.3"
cargo-binutils = "^0.3"
is_executable = "^1.0"
symbolic-common = "^8.0"
symbolic-demangle = { version = "^8.0", default-features = false }
flate2 = "^1.0"
lazy_static = "^1.3"
tera = "1"

[dev-dependencies]
pretty_assertions = "^0.6"
#
#[profile.release]
#lto = "thin"

[target.'cfg(unix)'.dependencies]
#tcmalloc = { version = "^0.3", features = ["bundled"] }
tcmalloc = { version = "^0.3", optional = true }

[dependencies.core_model]
path = "../../core_model"

[lib]
name = "coco_coverage"
crate-type = ["cdylib"]
