[package]
name = "coco_pipeline"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jenkinsfile = "0.1.1"

# grammar generator
pest = "2.1.3"
pest_derive = "2.1.0"

# serialize
serde          = "1"
serde_derive   = "1"
serde_json     = "1"

# Option parser with custom derive support
gumdrop = "0.8"

[dependencies.core_model]
path = "../../core_model"

[dependencies.plugin_interface]
path = "../../plugin_interface"

[lib]
name = "coco_pipeline"
crate-type = ["cdylib"]
