[package]
name = "coco_swagger"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { git = "https://github.com/softprops/openapi" }

[dependencies.core_model]
path = "../../core_model"

[lib]
name = "coco_swagger"
crate-type = ["cdylib"]
